[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/ui-theme.tres" type="Theme" id=1]
[ext_resource path="res://UserInterface/UI.gd" type="Script" id=2]

[node name="UI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
anchor_left = 0.789063
anchor_top = 0.106667
anchor_right = 0.947266
anchor_bottom = 0.16
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.426758
anchor_top = 0.45
anchor_right = 0.573242
anchor_bottom = 0.55
text = "Start"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RetryButton" type="Button" parent="."]
visible = false
anchor_left = 0.426758
anchor_top = 0.45
anchor_right = 0.573242
anchor_bottom = 0.55
text = "Retry"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="RetryButton" to="." method="_on_RetryButton_pressed"]
